# utilities

./: .gitignore  README.md  calculus_solve_2.csv  full.tex  pyproject.toml  results.csv  test_file.docx  yml_summary.txt
.github/workflows/: dev_tests.yml  library_tests.yml  tests.yml
_agents/: agent_devops_engineer.yaml  agent_python_programmer.yaml  multi_agent.yaml  prompts.md
_coding_agents/: agent_decision_making.yaml  agent_python_programmer.yaml  multi_agent.yaml  rules.md
dev_tools/: commit_and_push.bat  environment.yml  git_all_repos.ps1  removeEnv.sh  requirements.txt  setupEnv.sh
dev_tools/bash_tools/: common.sh  create_branch.sh  execution_log.txt  git_all_repos_daily_commit.sh  git_clean_stale_local_branches.sh  git_daily_commit.sh  git_select_branch.sh  git_select_year_month_branch.sh  removeEnv.sh  runTests.sh  select_branch.sh  setupEnv.sh
dev_tools/pdf/: edit_pdf.py  fillable_pdf.py  pdf_comments.py  read_pdf.py
docs/: _ascii_ecosystem.md  _ascii_ecosystem.puml  _eng_basic_skills.md  _public_library.puml  _py_basic_skills.md  _python_in_vs_code.md  api.md  data_science_architecture.puml  plotly.md  py_basic_skills.md  scratch.md  useful_shortcuts.md
docs/ci-cd/: azure-pipelines.yml  overview.md  windows.md
docs/data/: dictionary.md  yaml.md
docs/databases/PRE/: 0119-013-PRE-0002-01-MySQL Test (Outside vs. Inside Network) (Draft1).pptx  0119-013-PRE-0002-01-MySQL Test (Outside vs. Inside Network) (Draft2).pptx
docs/git/: git.md  git_advanced.md
docs/hardware/: server_remote_desktop.puml
docs/leg_Jupyter notebook/: jupyter notebook draft.doc
docs/leg_cprofile/Python-cProfile/: SampleExample-cProfile.py  cProfileFunc.py
docs/leg_digital_reports/: 0142-PRE-0013-04 Online Report Development (Draft4).pptx
docs/leg_programing_flowcharts/: 0119-009-PRE-0002-01 yaml Flowcharts (Draft1).pptx  0119-009-PRE-0002-01-Python Interface development Help.pptx  0119-009-PRE-0004-01-Data Architecture Inputs (Draft1).pptx  0119-PRE-0008-01 Back-Up-Guidance (Draft1).pptx
docs/leg_pycodes/: add_image_to_polar_plot.py  add_image_to_xy_plot.py  color_text_in_terminal.py  createCassandraKeyspaceTable.py  createTimeStamp.py  dataFrametoDatabase.py  test_read_zip_file.py
docs/legacy_Jupyter notebook/: sample example notebook.ipynb
docs/legacy_error_handling/: ExceptionHandler-forExcel.py  ExceptionHandler-forTextfile.py
docs/legacy_programing_flowcharts/: 0119-009-PRE-0001-01-Execution Plan (Draft3).pptx  0119-009-PRE-0003-01-OrcaFlex Manual Inputs (Draft2).pptx  0119-009-PRE-0005-01-Data Architecture - Folder Structure (Draft3).pptx  0119-009-PRE-0006-01-Python Interface development- jsonpickle help.pptx  0119-009-PRE-0007-01-Python Interface development Details (Draft -2).pptx
docs/legacy_pycodes/: Cassandra_Connection.py  DataStructureDictionaryExample.py  MongoDB_Connection.py  SQLtoDataFrame.py  checkEnvironment.py  createTimeStamp.py  databaseConnection.py  logFile.py  multi_plot.py  multi_plot2.py  readJSONObject.py  saveData.py
docs/office/: excel.md  excel_to_work.md
docs/project_management/: communications.md
docs/python/: f_strings.md  naming_conventions.md
docs/sub_ai/: ai.md  ai_agent_build.md  ai_agents_go_by.md  ai_case_studies.md  ai_intro.md  ai_setup.md  example_ai_folder_structure.md
docs/sub_ascii_workflows/: _ascii_ecosystem.puml
docs/sub_calculation_library_template/: _public_library.puml
docs/sub_ci-cd/: scheduled_task.xml
docs/sub_data/: data_format.md  file_format.md  yaml.md
docs/sub_databases/: intro.md
docs/sub_file_edit/: concatenate_files.md
docs/sub_git/: git.md  git_advanced.md  git_config.md
docs/sub_hardware/: aceengineer_resources_1.puml  remote_desktop.md  server_remote_desktop.puml
docs/sub_ide/: useful_shortcuts.md  vscode.md
docs/sub_latex/: latex_various_methods.md
docs/sub_logging/: logging.md
docs/sub_math/: calculus.md  calculus_differentiation_1.py  calculus_integration_1.py  calculus_integration_limits.py  calculus_solve_1.py  calculus_solve_2.py  calculus_solve_3.py  latex.md  latex_printing.py  latexify.py  simpy_latex_matplotlib.py
docs/sub_mathcad/: 2024-mathcad_analysis.md  Natural Math and Units.mcdx  modelling the ocean.mcdx  relations_between_distributed_load_shear_force_and_bending_moment.xps
docs/sub_meetings/: google_meet.md
docs/sub_ms_office/: Passport_Photo_Grid.docx  passport_photo.py  word.md
docs/sub_project_management/: agile.md  communications.md
docs/sub_python/: dataframes.md  datetime.md  f_strings.md  iterators.md  linting.md  text_color.md
docs/sub_scripting/: scripting.md
docs/sub_shell/: gitbash.md  powershell.md
docs/sub_utilities/: define_df_array.py  viz_inset_plots_polar_in_polar.py
docs/sub_visualization/: data_from_scanned_plot.md  multi_plot2.py  visualization.md  viz_architecture.puml
docs/sub_web_scraping/: api.md
docs/sub_website_hosting/: 0119-018-0001-01 Websites Hosting (Draft1).pptx
docs/utilities/: viz_inset_plots_cartesian_in_cartesian.py  viz_inset_plots_polar_in_cartesian.py
docs/visualization/: visualization.md
modules-documentation/: reportgen-documentation.md
setup/: environment.yml
src/assetutilities/: __init__.py  __main__.py  calculation.py  engine.py
tests/: all_yml_status_pytest.csv  app_file_management_file_management.yml  read_pdf.yml  test_all_yml.py  test_compare_yaml_files.py  test_file_management.py  test_pipeline.py  test_pytest_utilities.py  test_text_analytics.py  test_utilities.py  yml_summary_pytest.txt
tests/download_data/: test_dwnld_from_zipurl.py
tests/downloading_data/: test_from_url.py
tests/edit_pdf/: edit_large_pdf.yml
tests/excel_utilities/: excel_utilities_custom_calculation.yml
tests/file_edit/: file_edit_concatenate_array.bat  file_edit_concatenate_array_0.bat
tests/file_management/: app_file_management_file_management_not_contain.yml
tests/test_data/: app_read_pdf_read_pdf.yml  downloading_data.yml  read_pdf_pypdf2.yml
tests/visualization/: test_xy_add_image.py  test_xy_scatter_input.py
tests/word_utilities/: search_LNGC.docx
(+838 files in other folders)
